<resources>
    <string name="app_name">RC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Geek Brains</string>
    <string name="nav_header_subtitle">support@geekbrains.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Команды</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_recycler">Devices</string>
    <string name="menu_mode">Mode</string>
    <string name="take_photo">Сделать фото</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="text_location">Расположение</string>
    <string name="text_protocol">Протокол</string>
    <string name="text_device">Устройство</string>
    <string name="edit_device">Редактирование устройства</string>
    <string name="edit_settings">Редактирование команд</string>
    <string name="pult_device">Пульт управления</string>
    <string name="button_power">Вкл/Выкл</string>
    <string name="button_mute">Приглушение</string>
    <string name="button_one">Один</string>
    <string name="button_tow">Два</string>
    <string name="button_three">Три</string>
    <string name="button_four">Четыре</string>
    <string name="button_up">Вверх</string>
    <string name="button_down">Вниз</string>
    <string name="button_minus">Минус</string>
    <string name="button_plus">Плюс</string>
    <string name="from_file">Загрузить из файла</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="disconnect">Disconnect</string>

    <string-array name="options">
        <item>Bluetooth Classic</item>
        <item>Bluetooth Low Energy</item>
        <item>Wi-fi</item>
        <item>Third-party Software</item>
    </string-array>

</resources>

